    * 0992 FIX: zfs_arc_cache: returns OK even if values of arc meta are missing...

    Multisite:
    * 0934 FIX: Logwatch messages with class unknown ( 'u' ) now displayed as WARN...
    * 0166 FIX: mobile gui: Fixed colors of command list...

    WATO:
    * 0987 New button for updating DNS cache...
    * 0813 FIX: LDAP: Improved slightly missleading logging of LDAP sync actions...

    Reporting & Availability:
    * 0985 Availability: display phases of freqent state changes as "chaos"...

    Event Console:
    * 0816 States of events can now be set by patterns...

    HW/SW-Inventory:
    * 0818 FIX: Fixed exception in HW/SW inventory search dialog...


1.2.5i3:
    Core & Setup:
    * 0884 New options --oid and --extraoid for cmk --snmpwalk...
    * 0785 FIX: Availability: fixed memory leak in table statehist...
    * 0903 FIX: availability: fixed bug causing the availability feature not considering timeperiod transitions
    * 0888 FIX: Fix SNMP inventory check in simulation mode

    Checks & Agents:
    * 0149 cisco_secure: New check for Port Security on Cisco swichtes
    * 0751 New localcheck for Linux that makes sure that filesystems in /etc/fstab are mounted...
    * 0783 enterasys_lsnat: new check monitoring the current LSNAT bindings
    * 0601 printer_alerts: check can now display a textual representation of the alert code...
            NOTE: Please refer to the migration notes!
    * 0799 ibm_svc_systemstats.cpu_util: New check for CPU Utilization of an IBM SVC / V7000 device in total
    * 0800 ibm_svc_nodestats.cache, ibm_svc_systemstats.cache: New checks for Cache Usage of IBM SVC / V7000 devices
    * 0150 printer_suply: New option to upturn toner levels...
    * 0801 ibm_svc_eventlog: New Check for Messages in Event log of IBM SVC / V7000 devices
    * 0151 enterasys_cpu_util: Changed check to not longer summarize all modules...
            NOTE: Please refer to the migration notes!