@@ -1,0 +1,11 @@
+Title: CPU utilization: increased maximum value to 10000
+Level: 1
+Component: wato
+Version: 1.2.5i4
+Date: 1402394358
+Class: fix
+
+The maximum value for the CPU utilization in the WATO rules "State and count of processes"
+and "Process inventory" was set to 101 percent. There were some instances where this value was higher than this limit.
+For example if an application used multiple CPUs or the utilization value was calculated for a group of processes.
+
