@@ -17,6 +17,7 @@
     WATO:
     * 0987 New button for updating DNS cache...
     * 0813 FIX: LDAP: Improved slightly missleading logging of LDAP sync actions...
+    * 0935 FIX: CPU utilization: increased maximum value to 10000...
 
     Reporting & Availability:
     * 0985 Availability: display phases of freqent state changes as "chaos"...
